--- a/app/manifest.json
+++ b/app/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "First Application",
-  "short_name": "MyApp",
+  "name": "Gulp Backbone",
+  "short_name": "GB",
   "icons": [{
         "src": "images/icon-128x128.png",
         "sizes": "128x128",
@@ -10,7 +10,7 @@
         "sizes": "192x192",
         "type": "image/png"
       }],
-  "start_url": "/index.html?homescreen=1",
+  "start_url": "/index.html",
   "display": "standalone",
   "background_color": "#3E4EB8",
   "theme_color": "#2F3BA2"
